welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: ')' expected but $XMLSTART$< found.
	if (0 <day && day < 6)
              ^alarmClock:18: error: illegal start of simple expression
}
^